add a mobile design

--- a/src/components/Contacto.astro
+++ b/src/components/Contacto.astro
@@ -3,8 +3,8 @@ import ContactoData from "../components/datacontact/ContactoData";
 import FormularioData from "../components/datacontact/FormularioData";
 ---
 
-<div class="contactContainer mt-[30%] border-t-1 border-[#333]">
-    <section class="w-[70%] mx-auto h-[65vh] py-[0%] flex justify-between">
+<div class="contactContainer mt-[30%] border-t-1 max-sm:py-[5vh] border-[#222]">
+    <section class="w-[70%] max-sm:w-[80%] mx-auto h-[65vh] py-[0%] max-sm:block flex justify-between">
         <ContactoData client:visible />
         <FormularioData client:visible />
     </section>
