--- a/src/components/Formacion.astro
+++ b/src/components/Formacion.astro
@@ -34,12 +34,12 @@ const formaciones: Formacion[] = [
 ---
 
 <div
-    class="h-screen w-[70%] mt-[20%] mx-auto flex flex-col justify-center pt-[5%] align-middle"
+    class="h-fit w-[70%] mb-[45vh] max-sm:w-4/5 max-sm:mt-[30vh] mx-auto flex flex-col justify-center align-middle"
 >
     <h2 id="titleSection">
         <i class="fa-solid fa-book opacity-50"></i> Formación académica
     </h2>
-    <ol class="mt-[2%]">
+    <ol>
         {
             formaciones.map((form: Formacion) => (
                 <li>
