--- a/src/components/Experiencia.astro
+++ b/src/components/Experiencia.astro
@@ -9,7 +9,6 @@ interface Experiencia {
     link: string;
 }
 
-import "@fortawesome/fontawesome-free/css/all.css";
 import Card from "./experiencia/Card";
 
 const experiencias: Experiencia[] = [
@@ -51,12 +50,12 @@ const experiencias: Experiencia[] = [
 ---
 
 <div
-    class="mt-[10%] h-screen w-[70%] mx-auto flex flex-col justify-center pt-[5%] align-middle"
+    class="h-fit mb-[45vh] w-[70%] max-sm:w-[80%] mx-auto flex flex-col justify-center align-middle"
 >
     <h2 id="titleSection">
         <i class="fa-solid fa-briefcase opacity-50"></i> Experiencia laboral
     </h2>
-    <ol class="mt-[2%]">
+    <ol>
         {
             experiencias.map((experience: Experiencia) => (
                 <li>
@@ -73,6 +72,7 @@ const experiencias: Experiencia[] = [
         font-weight: 700;
         color: #eee;
         text-align: center;
+        margin-bottom: 20px;
     }
 
     .cardContainer {
