--- a/src/components/Proyectos.astro
+++ b/src/components/Proyectos.astro
@@ -4,27 +4,27 @@ import { projects } from "../data/projects";
 import "@fortawesome/fontawesome-free/css/all.css";
 ---
 
-<div class="mt-[20%]">
+<div class="mb-[45vh] max-sm:w-[90%] max-sm:mx-auto">
     <h2 id="titleSection">
         <i class="fa-solid fa-diagram-project opacity-50"></i> Proyectos recientes
     </h2>
-    <ul class="mt-[4%]">
+    <ul>
         {
             projects.map((project) => (
-                <li class="w-[75%] mx-auto mb-[5%] flex">
-                    <article class="w-1/2">
+                <li class="w-[75%] mx-auto mb-[5%] flex max-sm:block max-sm:mb-[15vh]">
+                    <article class="w-1/2 max-sm:w-[100%] ">
                         <img
-                            class="w-full h-[40vh] rounded-2xl"
+                            class="w-full h-[40vh] max-sm:h-[20vh] rounded-2xl"
                             src={project.image.src}
                             alt={project.title}
                         />
                     </article>
 
-                    <article class="w-1/2 pl-[3%]">
+                    <article class="w-1/2 max-sm:w-[100%] max-sm:mt-[4%] pl-[3%] max-sm:pl-0">
                         <h2 class="text-[1.4rem] text-[#ddd]">
                             {project.title}
                         </h2>
-                        <ul class="flex justify-start mt-[2%]">
+                        <ul class="flex justify-start mt-[2%] max-sm:mt-[4%] max-sm:mb-[4%]">
                             {project.stack.map((hab) => (
                                 <p
                                     class={`mr-[2%] rounded-md opacity-80 text-[.8rem] py-[.7%] px-[3%] text-black ${hab}`}
@@ -36,9 +36,9 @@ import "@fortawesome/fontawesome-free/css/all.css";
                         <p class="mt-[2%] text-balance text-[#ccc]">
                             {project.description}
                         </p>
-                        <a href={project.github} target="_blank">
+                            <a href={project.github} target="_blank">
                             <Button
-                                className="mt-[2%] opacity-100 text-[#8ed2ff]"
+                                className="mt-[2%] opacity-100 text-[#8ed2ff] max-sm:mt-[5%]"
                                 color="primary"
                                 variant="flat"
                                 client:visible
@@ -47,9 +47,9 @@ import "@fortawesome/fontawesome-free/css/all.css";
                             </Button>
                         </a>
                         {project.deploy && (
-                            <a href={project.deploy} target="_blank">
+                                <a href={project.deploy} target="_blank">
                                 <Button
-                                    className="mt-[2%] opacity-100 text-[#8ed2ff]"
+                                    className="mt-[2%] opacity-100 text-[#8ed2ff] max-sm:mt-[5%]"
                                     color="primary"
                                     variant="flat"
                                     client:visible
