--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,4 +1,4 @@
-<div class="border-t-1 border-[#222] py-[1%] pt-[1.5%] leading-none text-[#aaa] text-center">
+<div id="footer" class="border-t-1 max-sm:py-[3vh] max-sm:p border-[#222] py-[1%] leading-none text-[#aaa] text-center">
     <a href="https://www.linkedin.com/in/diego-martins-563954278/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
     <a href="https://github.com/MartinsDiego17"><i class="fa-brands fa-github"></i></a>
     <a href="mailto:diegomartinsupe@hotmail.com"><i class="fa-solid fa-envelope"></i> </a> <br />
