--- a/src/components/Formacion.astro
+++ b/src/components/Formacion.astro
@@ -34,9 +34,9 @@ const formaciones: Formacion[] = [
 ---
 
 <div
-    class="h-fit w-[70%] mb-[45vh] max-sm:w-4/5 max-sm:mt-[30vh] mx-auto flex flex-col justify-center align-middle"
+    class="h-fit w-[70%] mb-[45vh] max-sm:mb-[30vh] max-sm:w-4/5 max-sm:mt-[30vh] mx-auto flex flex-col justify-center align-middle"
 >
-    <h2 id="titleSection">
+    <h2 class="titleSection">
         <i class="fa-solid fa-book opacity-50"></i> Formación académica
     </h2>
     <ol>
