--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -22,4 +22,8 @@ import HeaderNav from "./header/HeaderNav";
         transition: 0.2s;
     }
 
+    .smooth-scroll {
+        cursor: pointer;
+    }
+
 </style>
