--- a/src/components/Stack.astro
+++ b/src/components/Stack.astro
@@ -2,22 +2,22 @@
 import { technologies } from "../data/technologies";
 ---
 
-<div class="h-screen w-[70%] mx-auto flex flex-col mb-[45vh]  max-sm:w-4/5">
-    <h2 id="titleSection">
+<div class="h-fit w-[70%] max-sm:mb-[35vh] mx-auto flex flex-col mb-[45vh]  max-sm:w-4/5">
+    <h2 class="titleSection">
         <i class="fa-solid fa-computer opacity-50"></i> Tecnologías
     </h2>
 
-    <ul class="grid grid-cols-4 gap-[3%] w-[60%] max-sm:w-[100%] mx-auto">
+    <ul class="grid grid-cols-4 gap-[3%] 2xl:gap-[4.5%] w-[60%] max-sm:w-[100%] mx-auto">
         {
             technologies.map((tech) => {
                 const IconComponent = tech.image;
                 return (
                     <a href={tech.link} target="_blank">
-                        <li class="text-[#aaa] flex flex-col justify-center align-middle py-[25%] hover:text-[#eee] transition duration-150">
-                            <p class="text-[2rem] flex justify-center mb-[10%]">
+                        <li class="2xl:w-[90%] text-[#aaa] flex flex-col justify-center align-middle py-[25%] hover:text-[#eee] transition duration-150">
+                            <p class="flex justify-center mb-[10%]">
                                 <IconComponent />
                             </p>
-                            <p class="text-[.9rem] max-sm:text-[.8rem] text-center">{tech.name}</p>
+                            <p class="2xl:text-[1.3rem] text-[.9rem] max-sm:text-[.8rem] text-center">{tech.name}</p>
                         </li>
                     </a>
                 );
