--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,10 @@ import "@fontsource/onest";
 import Header from "../components/Header.astro";
 import ViewTransitions from "astro/components/ViewTransitions.astro";
 
+import { getI18N } from "../lenguajes";
+/* const currentLocale = Astro; */
+const i18n = getI18N({ "currentLocale": "es"})
+
 interface Props {
 	title: string;
 }
@@ -11,12 +15,16 @@ const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang={i18n.Layout.title}>
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
+		<meta name="description" content={i18n.Layout.description} />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link
+			rel="icon"
+			type="image/svg+xml"
+			href="../../public/icons/cubeIcon.svg"
+		/>
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 		<ViewTransitions />
@@ -25,36 +33,37 @@ const { title } = Astro.props;
 	<body class="font-sans">
 		<Header />
 		<slot />
-	</body><style is:global>
-		@import url("https://fonts.googleapis.com/css2?family=Onest:wght@700&display=swap");
+		<style is:global>
+			@import url("https://fonts.googleapis.com/css2?family=Onest:wght@700&display=swap");
 
-		body {
-			background: rgba(0, 0, 0, 0.75);
-			height: fit-content;
-			background-attachment: fixed;
-			background-size: cover;
-			background-repeat: no-repeat;
-			background-position: center top;
-			position: relative;
-			font-family: "onest";
-		}
-		body::before {
-			content: "";
-			position: absolute;
-			background-attachment: fixed;
-			top: 0;
-			left: 0;
-			width: 100%;
-			height: 100%;
-			background-image: url("../../public/images/body/fondo.jpg");
-			background-size: cover;
-			background-repeat: no-repeat;
-			background-position: center top;
-			filter: blur(3px);
-			z-index: -1;
-		}
-		body::-webkit-scrollbar {
-			display: none;
-		}
-	</style>
+			body {
+				background: rgba(0, 0, 0, 0.75);
+				height: fit-content;
+				background-attachment: fixed;
+				background-size: cover;
+				background-repeat: no-repeat;
+				background-position: center top;
+				position: relative;
+				font-family: "onest";
+			}
+			body::before {
+				content: "";
+				position: absolute;
+				background-attachment: fixed;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+				background-image: url("../../public/images/body/fondo.jpg");
+				background-size: cover;
+				background-repeat: no-repeat;
+				background-position: center top;
+				filter: blur(3px);
+				z-index: -1;
+			}
+			body::-webkit-scrollbar {
+				display: none;
+			}
+		</style>
+	</body>
 </html>
