--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,14 +7,22 @@ import Proyectos from "../components/Proyectos.astro";
 import Contacto from "../components/Contacto.astro";
 import Footer from "../components/Footer.astro";
 import Layout from "../layouts/Layout.astro";
+
+interface AstroInterface {
+  currentLocale: any;
+}
+
+import { getI18N } from "../lenguajes";
+const { currentLocale }: AstroInterface = Astro;
+const i18n = getI18N({ currentLocale });
 ---
 
-<Layout title="Diego Martins | Portfolio">
-    <Presentacion />
-    <Experiencia />
-    <Formacion />
-    <Stack />
-    <Proyectos />
-    <Contacto />
-    <Footer />
+<Layout title={i18n.Layout.title}>
+  <Presentacion />
+  <Experiencia />
+  <Formacion />
+  <Stack />
+  <Proyectos />
+  <Contacto />
+  <Footer />
 </Layout>
