--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,7 +18,7 @@ const { title } = Astro.props;
 <html lang={i18n.Layout.title}>
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="description" content={i18n.Layout.description} />
+		<meta name="description" content={""} />
 		<meta name="viewport" content="width=device-width" />
 		<link
 			rel="icon"
