--- a/src/components/App.astro
+++ b/src/components/App.astro
@@ -1,5 +1,5 @@
 ---
-import Presentacion from "../components/Presentacion.astro";
+import Inicio from "../components/Inicio.astro";
 import Experiencia from "../components/Experiencia.astro";
 import Formacion from "../components/Formacion.astro";
 import Stack from "../components/Stack.astro";
@@ -18,7 +18,7 @@ const i18n = getI18N({ currentLocale });
 ---
 
 <Layout title={i18n.Layout.title}>
-  <Presentacion />
+  <Inicio />
   <Experiencia />
   <Formacion />
   <Stack />
