--- a/src/components/Proyectos.astro
+++ b/src/components/Proyectos.astro
@@ -71,7 +71,7 @@ projects.forEach((pro, index) => {
                     </article>
 
                     <article class="w-1/2 max-sm:w-[100%] max-sm:mt-[4%] pl-[3%] max-sm:pl-0">
-                        <h2 class="text-[1.4rem] text-[#ddd] 2xl:text-[2.3rem]">
+                        <h2 class="font-extrabold text-[1.4rem] text-[#ddd] 2xl:text-[2.3rem]">
                             {project.title}
                         </h2>
                         <ul class="flex justify-start mt-[2%] max-sm:mt-[4%] max-sm:mb-[4%]">
