--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,28 +1,5 @@
 ---
-import Presentacion from "../components/Presentacion.astro";
-import Experiencia from "../components/Experiencia.astro";
-import Formacion from "../components/Formacion.astro";
-import Stack from "../components/Stack.astro";
-import Proyectos from "../components/Proyectos.astro";
-import Contacto from "../components/Contacto.astro";
-import Footer from "../components/Footer.astro";
-import Layout from "../layouts/Layout.astro";
-
-interface AstroInterface {
-  currentLocale: any;
-}
-
-import { getI18N } from "../lenguajes";
-const { currentLocale }: AstroInterface = Astro;
-const i18n = getI18N({ currentLocale });
+import App from "../components/App.astro"
 ---
 
-<Layout title={i18n.Layout.title}>
-  <Presentacion />
-  <Experiencia />
-  <Formacion />
-  <Stack />
-  <Proyectos />
-  <Contacto />
-  <Footer />
-</Layout>
+<App />
