fixed responsive p and input

--- a/src/components/Inicio.astro
+++ b/src/components/Inicio.astro
@@ -40,7 +40,7 @@ const developerFixed = developer.split("-");
         >
             {developerFixed[1]}.
         </h1>
-        <p class="mt-[1%] max-sm:mt-[5%] text-[#aaa] text-center">{paragraph}</p>
+        <p class="2xl:text-[1.2rem] text-pretty mt-[1%] max-sm:mt-[5%] text-[#aaa] text-center">{paragraph}</p>
 
         <div
             class="w-full redes max-sm:mt-[5%] flex justify-center place-items-center mt-[2%] max-sm:block max-sm:text-center"
