--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,10 +2,11 @@
 import "@fontsource/onest";
 import Header from "../components/Header.astro";
 import ViewTransitions from "astro/components/ViewTransitions.astro";
+import imageMeta from "../../public/images/body/imageMeta.jpeg"
 
 import { getI18N } from "../lenguajes";
 /* const currentLocale = Astro; */
-const i18n = getI18N({ "currentLocale": "es"})
+const i18n = getI18N({ currentLocale: "es" });
 
 interface Props {
 	title: string;
@@ -17,6 +18,10 @@ const { title } = Astro.props;
 <!doctype html>
 <html lang={i18n.Layout.title}>
 	<head>
+		<meta
+			property="og:image"
+			content={imageMeta.src}
+		/>
 		<meta charset="UTF-8" />
 		<meta name="description" content={""} />
 		<meta name="viewport" content="width=device-width" />
