--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,8 +2,8 @@
 import "@fontsource/onest";
 import Header from "../components/Header.astro";
 import ViewTransitions from "astro/components/ViewTransitions.astro";
-import imageMeta from "../../public/images/body/imageMeta.jpeg"
-
+/* import imageMeta from "../../public/images/body/imageMeta.jpeg"
+ */
 import { getI18N } from "../lenguajes";
 /* const currentLocale = Astro; */
 const i18n = getI18N({ currentLocale: "es" });
@@ -20,7 +20,7 @@ const { title } = Astro.props;
 	<head>
 		<meta
 			property="og:image"
-			content={imageMeta.src}
+			content={"https://github.com/AimarBustamante/aimarbusta.dev-portfolio-2.0/raw/main/public/images/mockup-for-readme.png"}
 		/>
 		<meta charset="UTF-8" />
 		<meta name="description" content={""} />
