fixed text home

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -16,7 +16,7 @@ const i18nTyped = i18n as I18N & { Header: PropsHeader };
 
 ---
 
-<HeaderNav {...i18nTyped.Header} client:only/>   
+<HeaderNav {...i18nTyped.Header} client:only="react"/>   
 
 <style is:global>
     
