--- a/src/components/Inicio.astro
+++ b/src/components/Inicio.astro
@@ -99,11 +99,10 @@ const developerFixed = developer.split("-");
 
 <style>
     .textGradient {
-        background: linear-gradient(to right, #6c3bff, #b83ab1);
+        background: linear-gradient(to left, white, #ccc, #aaa);
         background-clip: text;
         -webkit-text-fill-color: transparent;
         font-weight: 900;
         line-height: 1;
-        letter-spacing: -5px;
     }
 </style>
