--- a/src/components/Proyectos.astro
+++ b/src/components/Proyectos.astro
@@ -67,7 +67,7 @@ projects.forEach((pro, index) => {
                 <li class="w-[75%] mx-auto mb-[5%] flex max-sm:block max-sm:mb-[15vh]">
                     <article class="w-1/2 max-sm:w-[100%] 2xl:flex 2xl:justify-end">
                         <img
-                            class="w-full h-[40vh] 2xl:h-[32vh] 2xl:w-[90%] 2xl:h-[36vh] max-sm:h-[20vh] rounded-2xl"
+                            class="w-full h-[40vh] 2xl:w-[90%] 2xl:h-[36vh] max-sm:h-[20vh] rounded-2xl"
                             src={project.image}
                             alt={project.title}
                         />
