--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -54,7 +54,7 @@ const { title } = Astro.props;
 				left: 0;
 				width: 100%;
 				height: 100%;
-				background-image: url("../../public/images/body/fondo.jpg");
+				background-image: url("../../public/images/body/fondo.webp");
 				background-size: cover;
 				background-repeat: no-repeat;
 				background-position: center top;
