--- a/src/pages/test/index.astro
+++ b/src/pages/test/index.astro
@@ -1,13 +1,6 @@
----
-import Layout from "../../layouts/Layout.astro";
----
+<div class="w-screen h-screen bg-[red]">
 
-<Layout title="test">
-    <div class="flex flex-col leading-none  pr-[5vw] pb-[20%] justify-center place-items-end w-screen h-screen bg-white text-white">
-        <h1 class="text-[7rem] my-0 " >Diego Martins</h1>
-        <p class="text-[1.5rem] my-0 ">Fullstack Developer</p>
-    </div>
-</Layout>
+</div>
 
 <style>
     div {
